--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -2,12 +2,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     font-size: 1.5rem;
+    margin-bottom: 2rem;
+
+    .navbar-first {
+        display: flex;
+        .navbar-first-left,
+        .navbar-first-right {
+            flex: 1;
+        }
+    }
 
     ul {
         display: flex;
         color: $primary-color;
+        justify-content: center;
+        margin: 0;
+
         li {
             display: inline;
             padding: 0 20px;
