--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,50 +1,55 @@
 .navbar {
+  margin-left: 300px;
+  margin-right: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+
+  .navbar-first {
     display: flex;
-    flex-direction: column;
+    .navbar-first-left,
+    .navbar-first-right {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  ul {
+    display: flex;
+    color: $primary-color;
     justify-content: center;
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
+    margin: 0;
 
-    .navbar-first {
-        display: flex;
-        .navbar-first-left,
-        .navbar-first-right {
-            flex: 1;
-        }
+    li {
+      display: inline;
+      padding: 0 20px;
+      a {
+        position: relative;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: inherit;
+      }
+      a:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: $primary-color;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.3s ease-in-out 0s;
+      }
+      a:hover:before {
+        visibility: visible;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+      }
     }
-
-    ul {
-        display: flex;
-        color: $primary-color;
-        justify-content: center;
-        margin: 0;
-
-        li {
-            display: inline;
-            padding: 0 20px;
-            a {
-                position: relative;
-                text-transform: uppercase;
-                text-decoration: none;
-                color: inherit;
-            }
-            a:before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 2px;
-                bottom: 0;
-                left: 0;
-                background-color: $primary-color;
-                visibility: hidden;
-                transform: scaleX(0);
-                transition: all 0.3s ease-in-out 0s;
-            }
-            a:hover:before {
-                visibility: visible;
-                -webkit-transform: scaleX(1);
-                transform: scaleX(1);
-            }
-        }
-    }
+  }
 }
