--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -17,15 +17,24 @@
       justify-content: center;
     }
     .navbar-first-left {
-      .navbar-phone-number a {
-        display: flex;
-        align-items: center;
-        font-size: 1rem;
-        text-decoration: none;
-        color: inherit;
-        img {
-          padding: 5px;
-          transform: rotate(90deg);
+      img {
+        padding: 5px;
+      }
+      font-size: 1rem;
+      flex-direction: column;
+      .navbar-phone-number,
+      .navbar-email {
+        height: 3rem;
+      }
+      .navbar-phone-number {
+        a {
+          display: flex;
+          align-items: center;
+          text-decoration: none;
+          color: inherit;
+          img {
+            transform: rotate(90deg);
+          }
         }
       }
     }
