--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,10 @@ $big-photo-height-px: $photo-height-px * 2;
     grid-gap: 1rem;
     justify-items: center;
     align-items: center;
-    .big-grid {
-      height: $big-photo-height-px;
+    .size--big {
+      img {
+        height: $big-photo-height-px;
+      }
       grid-row-start: 1;
       grid-row-end: 3;
       grid-column-start: 1;
