--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -22,19 +22,23 @@
       }
       font-size: 1rem;
       flex-direction: column;
+
       .navbar-phone-number,
       .navbar-email {
-        height: 3rem;
+        padding: 10px;
+        width: 250px;
       }
+      a {
+        display: flex;
+        height: 2rem;
+        align-items: center;
+        text-decoration: none;
+        color: inherit;
+      }
+
       .navbar-phone-number {
-        a {
-          display: flex;
-          align-items: center;
-          text-decoration: none;
-          color: inherit;
-          img {
-            transform: rotate(90deg);
-          }
+        img {
+          transform: rotate(90deg);
         }
       }
     }
@@ -56,7 +60,7 @@
         color: inherit;
       }
       a:before {
-        content: "";
+        content: '';
         position: absolute;
         width: 100%;
         height: 2px;
