--- a/src/styles/notification.scss
+++ b/src/styles/notification.scss
@@ -1,7 +1,7 @@
 .notification {
   position: fixed;
   z-index: 1;
-  background: $primary-color;
+  background: blue;
   color: white;
   bottom: 0;
   padding: 50px;
