--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,23 +1,29 @@
 .button {
+  display: inline-block;
   border: none;
-  color: white;
   overflow: hidden;
   margin: 1rem;
   padding: 0.8rem 1rem;
   text-transform: uppercase;
   cursor: pointer;
-  
-  &:hover {
-    box-shadow: 0 0 5px 0 rgba($primary-color, 0.5);
-  }
+  background-color: transparent;
+  color: $primary-color;
 
   &.button-primary {
+    color: white;
     background-color: $primary-color;
   }
+
   &.button-primary:focus {
     background-color: darken($primary-color, 10%);
   }
+
   &.button-round {
-    border-radius: 10rem;
+    border-radius: 2rem;
+  }
+
+  &.size--small {
+    padding: 0.4rem 0.5rem;
+    margin: 0.1rem;
   }
 }
