--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,5 +10,6 @@ body {
 @import 'text-field';
 @import 'spinner';
 @import 'notification';
+@import 'cookies-notification';
 @import 'navbar';
 @import 'main';
