--- a/src/styles/cookies-notification.scss
+++ b/src/styles/cookies-notification.scss
@@ -1,6 +1,6 @@
 .cookies-notification {
   padding: 1rem;
-  background-color: #e6e6e6;
+  background-color: $cookie-notification-background;
   font-size: 0.8rem;
 
   .cookies-notification--buttons {
