PhotoItem style improvements.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,5 +11,6 @@ body {
 @import 'spinner';
 @import 'notification';
 @import 'cookies-notification';
+@import 'photo-item';
 @import 'navbar';
 @import 'main';
