--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,27 +1,20 @@
-$photo-height-px: 200px;
-$big-photo-height-px: $photo-height-px * 2;
-
 .main {
-  padding: 0 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   .photo-grid {
-    width: 500px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1rem;
     justify-items: center;
     align-items: center;
+
     .size--big {
-      img {
-        height: $big-photo-height-px;
-      }
       grid-row-start: 1;
       grid-row-end: 3;
       grid-column-start: 1;
       grid-column-end: 3;
-    }
-    img {
-      box-shadow: 0 0 5px 0 rgba($primary-color, 0.5);
-      height: $photo-height-px;
     }
   }
 }
