Not found as external component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ body {
 @import 'button';
 @import 'text-field';
 @import 'spinner';
+@import 'not-found';
 @import 'notification';
 @import 'cookies-notification';
 @import 'photo-item';
